# ahfhalotools

./: .gitignore  LICENSE  README.md  merger_detection_scheme_guide.md  pyproject.toml  setup.cfg
docs/ahfhalotools/: analysis.html  filetools.html  index.html  objects.html
docs/ahfhalotools/plotting/: index.html  plot3D.html  snapsplot.html
examples/: clusterCompDensvR.py  deltaMMergeComparison.py  deltaMoverMvtime.py  deltaProfileDatavTime.py  mergerDetectionComparison.py  profileData3DPlots.py  profileDatavRadius.py  profileDatavTime.py  truncateClusters.py  truncateClustersTest.py  truncateFiles.py  vDistEncHalosWithSkewPlots.py  velocityDistributionForEnclosedHalos.py  zrPlot.py
examples/clusterComp/: HaloDatavsHaloDataScatterPlot.py  clusterCompDensvR.py  densHist.py  gasLocDensMBPSimComp.py  gasLocDensMBPSimCompQUARTILEHIDING.py
src/ahfhalotools/: __init__.py  analysis.py  filetools.py  objects.py
src/ahfhalotools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ahfhalotools/plotting/: __init__.py  plot3D.py  snapsplot.py
testing/: testScript.py
