[metadata]
name = ahfhalotools
version = 1.0.13
author = Ben Davison-Petch
author_email = bendpetch@gmail.com
description = A Python 3 library for the analysis of data produced by AMIGA's Halo Finder (AHF).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenDavisonPetch/ahfhalotools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
